# iu9-cpp

./: .gitignore  Makefile
hw1/: detect_markers.cpp  meson.build  run.sh
lab10/: main.cpp  set_sequence.hpp
lab12/: Makefile  main.cpp
lab12/test/: 02
lab7/: main.cpp  polinom.cpp  polinom.h
lab8/: int_stack.hpp  main.cpp
lab9/: main.cpp  sparce_array.hpp
reports/: 10.md  12.md  7.md  8.md  9.md  hw1.md
